# event-xml-exporter

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.md  build.rs  standard.md
docs/: IMPLEMENTATION_PROMPT.md
src/: main.rs
src/app/: mod.rs
src/domain/: mod.rs
src/export/: mod.rs
src/platform/: event_log.rs  mod.rs
